# album-manager-cli

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: aux_code_quality.yml  aux_release.yml  push_main.workflow.yml
src/constants/: file_constants.py
src/entrypoints/: analyze_manifest_non_interactive.py  group_assets_non_interactive.py  group_photos.py  group_photos_non_interactive.py
src/models/: album.py  copy_status.py  ledger.py  manifest.py
src/utils/: album_utils.py  asset_utils.py  file_utils.py  image_graphic_utils.py  image_non_graphic_utils.py  image_utils.py  manifest_utils.py  video_non_graphic_utils.py
tests/: mock_test.py
