[tool.poetry]
name = "album-manager-cli"
version = "0.1.0"
description = "TBD"
authors = ["Rodrigo Sousa <rod_sousa@hotmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
  { include = "src" },
  { include = "requirements.txt" },
  { include = ".python-version" }
]

[tool.poetry.dependencies]
python = "^3.13"
pillow = "11.2.1"
loguru = "0.7.3"
questionary = "2.1.0"
opencv-python = "4.11.0.86"
pillow-heif = "0.22.0"
ffmpeg-python = "0.2.0"
types-pillow = "10.2.0.20240822"

[tool.poetry.group.dev.dependencies]
ruff = "0.11.10"
mypy = "1.15.0"
pytest = "8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
